# PaddleFL

core/paddlefl_mpc/mpc_protocol/: CMakeLists.txt  aby3_operators.cc  aby3_operators.h  mpc_config.h  mpc_instance_test.cc  mpc_operators.h  mpc_protocol_test.cc  privc_operators.h  privc_protocol.cc  privc_protocol.h
core/paddlefl_mpc/operators/: mpc_elementwise_add_op.h  mpc_mul_op.h  mpc_relu_op.cc  mpc_relu_op.h  mpc_softmax_with_cross_entropy_op.cc  mpc_softmax_with_cross_entropy_op.h
core/paddlefl_mpc/operators/math/: elementwise_op_function.h
core/privc/: CMakeLists.txt  crypto.h  fixedpoint_tensor.h  fixedpoint_tensor_imp.h  fixedpoint_tensor_test.cc  privc_context.cc  privc_context.h  triplet_generator.h  triplet_generator_impl.h  triplet_generator_test.cc
